# tetris-cpp

./: CMakeLists.txt  README.md  main.cpp
libs/: CMakeLists.txt
libs/SDL2/: CMakeLists.txt
libs/gtest/: CMakeLists.txt
tests/: CMakeLists.txt
tests/libs/gtest/: CMakeLists.txt
tests/tetris_tests/: CMakeLists.txt  main_test.cpp
tetris/: .clang-format  Board.cpp  Board.hpp  CMakeLists.txt  Gameplay.cpp  Gameplay.hpp  GraphicInterface.cpp  GraphicInterface.hpp  Piece.cpp  Piece.hpp  PieceDefinition.cpp  PieceDefinition.hpp  Tetris.cpp  Tetris.hpp  constants.hpp  main.cpp  settings.hpp
tetris/assets/: CMakeLists.txt
tetris/include/: Board.hpp  Gameplay.hpp  GraphicInterface.hpp  PieceDefinition.hpp  Point.hpp  Tetris.hpp  settings.hpp
tetris/src/: Board.cpp  Gameplay.cpp  GraphicInterface.cpp  PieceDefinition.cpp  Point.cpp  Tetris.cpp  main.cpp
